--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -5,6 +5,7 @@
 {% else %}
 	<img src="{{ site.url }}/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo"></a>
 {% endif %}
+<img src="http://www.gravatar.com/avatar/{{site.owner.email_md5}}?s=150" class="bio-photo" alt="{{ site.owner.name }}" />
 <h3>{{ site.owner.name }}</h3>
 <p>{{ site.owner.bio }}</p>
 {% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" class="author-social" target="_blank"><i class="icon-twitter"></i> Twitter</a>{% endif %}
